--- a/css/styles.css
+++ b/css/styles.css
@@ -10624,66 +10624,99 @@ svg {
 }
 
 .hero {
-  width: 100vw;
-  height: calc(100vh - var(--mc-scale-10));
-  max-height: 800px;
+  margin-bottom: var(--mc-scale-9);
 }
 
-.hero__gradient-bottom {
-  background: linear-gradient(to top, rgb(0, 0, 0) 0, rgba(0, 0, 0, 0.6) 25%, rgba(0, 0, 0, 0) 45%) center center no-repeat;
+@media screen and (min-width: 768px) {
+  .hero {
+    min-height: 500px;
+    margin-bottom: calc(-1 * var(--mc-scale-8));
+  }
 }
-
 .hero__img {
-  display: block;
-  position: absolute;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+.hero__img-wrapper {
   box-sizing: border-box;
+  display: block;
+  overflow: hidden;
   width: initial;
   height: initial;
+  background: none;
+  opacity: 1;
+  border: 0;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  border: 0;
-  opacity: 1;
-  background: none;
+  position: absolute;
   inset: 0;
 }
-.hero__img img {
-  display: block;
+.hero__img-wrapper img {
   position: absolute;
+  inset: 0px;
   box-sizing: border-box;
-  width: 0;
+  padding: 0px;
+  border: none;
+  margin: auto;
+  display: block;
+  width: 0px;
+  height: 0px;
   min-width: 100%;
   max-width: 100%;
-  height: 0;
   min-height: 100%;
   max-height: 100%;
-  margin: auto;
-  padding: 0;
-  border: none;
-  inset: 0;
+  object-fit: cover;
+  object-position: center top;
 }
 
-.hero_name-img {
-  display: flex;
-  align-items: flex-end;
-  width: 100%;
-  min-height: 130px;
+@media screen and (min-width: 768px) {
+  .hero__img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 65%;
+    height: 100%;
+    padding: 0;
+  }
+  .hero__img:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 350px;
+    height: 100%;
+    background: linear-gradient(to right, var(--mc-color-neutral-1010) 0, rgba(var(--mc-color-neutral-1010-rgb), 0) 100%);
+  }
 }
-.hero_name-img img {
-  display: block;
-  position: relative;
-  box-sizing: border-box;
-  width: 100%;
-  min-width: 100%;
-  max-width: 100%;
-  height: unset;
-  min-height: 100%;
-  max-height: 100%;
-  margin: 0 auto;
-  padding: 0;
-  border: none;
-  inset: 0;
-  object-fit: contain;
+@media (min-width: 576px) {
+  .cta-btn {
+    max-width: 160px;
+  }
+}
+.pricing-text {
+  color: var(--mc-color-text-medium);
+}
+
+@media screen and (min-width: 576px) {
+  .pricing-text {
+    max-width: calc(320px + var(--mc-scale-3));
+  }
+}
+@media screen and (min-width: 576px) {
+  .classes-container {
+    background-color: var(--mc-color-neutral-1000);
+  }
+}
+.classes-icon, .skills {
+  background-color: var(--mc-color-neutral-900);
+}
+
+.classes-icon {
+  width: 48px;
+  height: 48px;
 }
 
 .jump-nav {
